# tourguide_VKR

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: 10f409bbc8a3_add_img_to_place.py  2ddd0dfea1c0_initial_migration.py  5c0efdd7eab9_init_full_database.py  9823631f3409_init_full_schema_v1.py  a710960ab90b_coordinates.py  e223adebe078_add_lat_lon_to_places.py
app/: main.py
app/api/: auth.py  places.py  users.py
app/core/: config.py  database.py  security.py
app/models/: place.py  user.py
app/schemas/: place.py  user.py
app/services/: ml_service.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
