[project]
name = "tourguide"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "asyncpg",
    "pgvector",
    "pydantic-settings",
    "python-dotenv",
    "sentence-transformers",
    "alembic",
]